<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="5dp">


    <TextView
        android:layout_width="0dp"
        android:layout_weight="2.85"
        android:layout_height="62dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/product"
         />


    <Button
        android:layout_width="0dp"
        android:layout_weight="1.4"
        android:layout_height="wrap_content"
        android:text="@string/Cart_adapter_Button_Add"
        android:id="@+id/add" />

    <Button
        android:layout_width="0dp"
        android:layout_weight="1.4"
        android:layout_height="wrap_content"
        android:text="@string/Cart_adapter_Button_Sub"
        android:id="@+id/sub" />

    <Button
        android:layout_width="0dp"
        android:layout_weight="1.4"
        android:layout_height="wrap_content"
        android:text="@string/Cart_adapter_Button_Delete"
        android:id="@+id/delete" />

</LinearLayout>
