<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7CCC8"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/editTextAccount"
            android:layout_width="match_parent"
            android:hint="@string/Activity_login_EditText_Account"
            android:layout_height="wrap_content"/>
        <EditText android:id="@+id/editTextPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:hint="@string/Activity_login_EditText_Password"
            android:layout_height="wrap_content"/>

        <Button
            android:text="@string/Activity_login_Button_Login"
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ProgressBar
    android:layout_centerInParent="true"
    android:visibility="gone"
    android:id="@+id/progressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

</RelativeLayout>
