<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="match_parent"
              android:padding="5dp"
              android:background="@drawable/rectangle"
    tools:showIn="@layout/pageritem_container">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.4"
        android:orientation="vertical">
        <TextView android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:id="@+id/textViewProductName"
            android:textSize="@dimen/abc_text_size_menu_material" />
        <com.android.volley.toolbox.NetworkImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="7.8"
            android:layout_gravity="center_horizontal"
            android:id="@+id/image" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PagerItem_Product_TextView_Price"
                />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewProductPrice"
                />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/PagerItem_Combo_TextView_Quantity"
                />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/textViewProductCount"
                />

    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_weight="1.5">
        <Button android:id="@+id/btnAdd" android:text="@string/PagerItem_Product_Button_Add"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <Button android:id="@+id/btnDecrease" android:text="@string/PagerItem_Product_Button_Sub"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>